--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,38 @@
-table, th, td {
-    border: 5px black solid;
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: white;
+}
+
+h1 {
+    text-align: center;
+    background-color: rgb(21, 94, 119);
+    color: white;
+    padding: 10px;
+}
+
+table {
+    width: 100%;
+    margin: 20px;
+}
+
+th {
+    background-color: blue;
+    color: white;
+    padding: 10px;
+    text-align: center;
+}
+
+tr:nth-child(even) {
+    background-color: rgb(207, 207, 207);
+}
+
+tr:nth-child(odd) {
+    background-color: rgb(170, 170, 170);
+}
+
+td {
+    padding: 10px;
+    text-align: center;
 }
